tests/error/local_move_variable_type.bz
// error: non-parameter variable cannot have a move reference type 'move i32'
function test()
{
	let _: move i32 = 0i32;
}
